[gd_scene load_steps=3 format=3 uid="uid://jt4bjndcbfgv"]

[ext_resource type="Script" path="res://node_2d.gd" id="1_jrksl"]
[ext_resource type="Texture2D" uid="uid://tgsk2jyvhl8n" path="res://Mario.png" id="2_ha1lu"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_jrksl")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SeccionInfo" type="Control" parent="Control"]
layout_mode = 1
anchor_bottom = 0.2
offset_right = 40.0
offset_bottom = 40.0

[node name="SeccionPista" type="Control" parent="Control"]
layout_mode = 1
anchor_top = 0.2
anchor_bottom = 0.8
offset_right = 40.0
offset_bottom = 40.0

[node name="Biker1" type="Sprite2D" parent="Control/SeccionPista"]
position = Vector2(0, -8)
texture = ExtResource("2_ha1lu")

[node name="Biker2" type="Sprite2D" parent="Control/SeccionPista"]
position = Vector2(0, -8)
texture = ExtResource("2_ha1lu")

[node name="Biker3" type="Sprite2D" parent="Control/SeccionPista"]
position = Vector2(0, -8)
texture = ExtResource("2_ha1lu")

[node name="Biker4" type="Sprite2D" parent="Control/SeccionPista"]
position = Vector2(0, -8)
texture = ExtResource("2_ha1lu")

[node name="SeccionJugadores" type="Control" parent="Control"]
layout_mode = 1
anchor_top = 0.8
anchor_bottom = 1.0
offset_right = 40.0
offset_bottom = 40.0
